@@ -1,6 +1,10 @@
 #This file is part of Tryton.  The COPYRIGHT file at the top level of
 #this repository contains the full copyright notices and license terms.
 "Attachment"
+import os
+import urllib
+import urlparse
+
 from tryton.gui.window.view_form.screen import Screen
 from tryton.gui.window.win_form import WinForm
 
@@ -33,3 +37,13 @@ class Attachment(WinForm):
             self.screen.group.save()
         if self.attachment_callback:
             self.attachment_callback()
+
+    def add_uri(self, uri):
+        self.screen.switch_view('form')
+        data_field = self.screen.group.fields['data']
+        name_field = self.screen.group.fields[data_field.attrs['filename']]
+        new_record = self.screen.new()
+        file_name = os.path.basename(urlparse.urlparse(uri).path)
+        name_field.set_client(new_record, file_name)
+        data_field.set_client(new_record, urllib.urlopen(uri).read())
+        self.screen.display()
